--- a/crawler/build.gradle
+++ b/crawler/build.gradle
@@ -17,4 +17,5 @@ dependencies {
     compile group: 'com.sleepycat', name: 'je', version: '18.3.12'
     compile group: 'org.hibernate', name: 'hibernate-core', version: '5.4.2.Final'
     compile 'org.jsoup:jsoup:1.12.1'
+    compile group: 'org.postgresql', name: 'postgresql', version: '42.2.5'
 }
